[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
spin = "0.7.0"
virtio-drivers = { version = "0.6.0" }
num_enum = { version = "0.5", default-features = false }
ext4_rs = { path = "libs/ext4_rs" }
visionfive2-sd = { path = "libs/visionfive2-sd" }
fdt = { git = "https://github.com/repnop/fdt" }

[features]
default = ["qemu"]  # 默认编译 QEMU 版本
qemu = []
visionfive2 = []
